@@ -1,3 +1,5 @@
+* Fix Fuse.Date instanceof detection and make Fuse.Object conform to ECMA specification when passing a null or undefined value. [jddalton]
+
 * Remove strict equality operators when checking indexOf() results because they fail on Fuse.Number instances and correct more overlooked native to Fuse.<native> conversions. [jddalton]
 
 * Optimize Fuse.Function statics and add a method name cache to Fuse.Fusebox#updateGenerics. [jddalton]
